spacing issues fixed

--- a/app/src/components/bodyZones.css
+++ b/app/src/components/bodyZones.css
@@ -2,7 +2,7 @@
   width: 23%;
   margin-top: 8%;
   height: 100%;
-  
+  margin-right:0%;
 }
 
 .contribute:hover {
