--- a/app/src/components/leftPane.css
+++ b/app/src/components/leftPane.css
@@ -1,10 +1,10 @@
 .leftPaneBody {
 
-    width: 3.5%;
+    width: 0%;
 }
 
 .leftPaneModal {
 
     color: black;
-    width: 5%;
+    width: 0%;
 }
